k8s_ubuntu_appserver/files/kafka-strimzi/kafka-cluster-ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-cluster-ingress
---

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-bootstrap
  namespace: kafka-cluster-ingress
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`bootstrap.kafkaingress.sharks4it.dk`)
      services:
        - name: kafka-cluster01-kafka-external-bootstrap
          port: 9094
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-broker-0
  namespace: kafka-cluster-ingress
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`broker-0.kafkaingress.sharks4it.dk`)
      services:
        - name: kafka-cluster01-kafka-external-0
          port: 9094
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-broker-1
  namespace: kafka-cluster-ingress
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`broker-1.kafkaingress.sharks4it.dk`)
      services:
        - name: kafka-cluster01-kafka-external-1
          port: 9094
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-broker-2
  namespace: kafka-cluster-ingress
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`broker-2.kafkaingress.sharks4it.dk`)
      services:
        - name: kafka-cluster01-kafka-external-2
          port: 9094
  tls:
    passthrough: true
